# CGPassignment

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: PhysicsManager.cpp  PhysicsManager.h  RaceCar.cpp  RaceCar.h
src/Game/: Collectible.cpp  Cursor.cpp  Game.cpp  Item.cpp  Level.cpp  Mainmenu.cpp  Map.cpp  Obstacle.cpp  RaceCar.cpp
src/Game/Header/: Collectible.h  Cursor.h  Game.h  Item.h  Level.h  Mainmenu.h  Map.h  Obstacle.h  RaceCar.h
src/Manager/: InputManager.cpp  PhysicsManager.cpp  SceneManager.cpp  SceneManager.h  SoundManager.cpp  SoundManager.h  Timer.cpp
src/Manager/Header/: InputManager.h  PhysicsManager.h  SceneManager.h  SoundManager.h
src/Scene/: EndScene.cpp  Level1.cpp  MainMenuScene.cpp  SelectStageScene.cpp
src/Scene/Header/: EndScene.h  Level1.h  MainMenuScene.h  Scene.h  SelectStageScene.h
src/Timer/: Timer.cpp
src/Timer/Header/: Timer.h
